# admx-lint

./: CMakeLists.txt  Dockerfile.p9  README.md
.gear/: admx-lint.spec
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml
src/: CMakeLists.txt  basetypes.h  policydefinitionfiles.h  policydefinitions.h
